Bug 255938 - Closing the Entry Editor doesn't discard edits in the dialog boxes
Summary: Closing the Entry Editor doesn't discard edits in the dialog boxes
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-03 05:33 UTC by Robby Stephenson
Modified: 2010-11-03 06:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2010-11-03 05:33:05 UTC
Version:           2.3 (using Devel) 
OS:                Linux

1) double-click on an entry to open it
2) type something into an empty field or change an existing field
3) click close
4) click discard
   --> the entry is not bolded
   --> the collection is not marked as having a change (title bar
doesn't include '[modified]')
5) double-click on the entry again
   --> the text I entered is (incorrectly) still there

At this point, if I select a different entry and then re-select the
initial entry, the text will be properly discarded.  I selected a
different entry, made & saved a change there, and then saved the
Tellico file; when I re-opened the file the discarded text was
(correctly) still gone.

To cause potential data loss: repeat steps 1-5, then:
6) edit another field
7) click close
8) click save entry
   --> the original, "discarded" change gets (incorrectly) applied

This could cause data loss in the case where a user edits an entry,
makes a mistake and wants to 'start over', closes the entry and
discards their changes, then re-edits the entry.  A bit of a corner
case, but could catch someone who isn't paying close attention or
making changes in multiple categories (tabs).

Reproducible: Didn't try
Comment 1 Robby Stephenson 2010-11-03 06:39:10 UTC
SVN commit 1192429 by rstephenson:

Be consistent with behavior for edit dialog when closing. If Cancel
is clicked, keep the dialog open. And be sure to discard edits.

BUG:255938


 M  +4 -0      ChangeLog  
 M  +27 -5     src/entryeditdialog.cpp  
 M  +4 -0      src/entryeditdialog.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1192429