Be consistent with behavior for edit dialog when closing. If Cancel is clicked, keep the dialog open. And be sure to discard edits.

BUG:255938

svn path=/trunk/extragear/office/tellico/; revision=1192429